<resources>
    <string name="app_name">SignInYoga</string>
    <string name="change_starts_here">Change Starts Here</string>
    <string name="describe">Save your progress to access your personal trainning program!</string>
    <string name="email">EMAIL</string>
    <string name="facebook">FACEBOOK</string>
    <string name="google">GOOGLE</string>
    <string name="connect_email_address">Connect email address</string>
    <string name="it_s_recommended_to_connect_your_email_address_for_us_to_better_protect_your_information">It’s recommended to connect your email address for us to better protect your information.</string>
    <string name="close">close</string>
    <string name="your_email">Your Email</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="set_password">Set Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_password_again">Enter your password again</string>
    <string name="confirm">CONFIRM</string>
    <string name="hello">hello</string>
</resources>