<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignInWithEmail"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="50dp"
        tools:ignore="ScrollViewSize">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="8dp"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="26dp"
            android:contentDescription="@string/close" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect_email_address"
            android:textSize="28sp"
            android:lineHeight="38.25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_close"
            android:textColor="#367E90"
            android:layout_marginStart="24dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="24dp"
            tools:ignore="UnusedAttribute"
            android:fontFamily="@font/semibold"/>

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/it_s_recommended_to_connect_your_email_address_for_us_to_better_protect_your_information"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:lineHeight="21.86sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="22dp"
            android:layout_marginTop="19dp"
            tools:ignore="RtlCompat,UnusedAttribute"
            android:fontFamily="@font/regular"
            />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:lineHeight="21.86sp"
            android:textColor="#9a9a9a"
            android:text="@string/your_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_info"
            android:layout_marginStart="24dp"
            android:layout_marginTop="63dp"
            android:layout_marginLeft="24dp"
            tools:ignore="UnusedAttribute"
            android:fontFamily="@font/regular"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_email"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="23dp"
            android:textSize="16sp"
            android:lineHeight="21.86sp"
            tools:ignore="MissingConstraints,RtlCompat,UnusedAttribute"
            android:autofillHints=""
            android:inputType="textEmailAddress"
            android:textColorHint="#c9c9c9"
            android:textColor="@color/black"
            android:fontFamily="@font/regular"
            android:backgroundTint="#EAECEF"
            android:paddingBottom="20dp"/>

        <TextView
            android:id="@+id/tv_set_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:lineHeight="21.86sp"
            android:textColor="#9a9a9a"
            android:text="@string/set_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="24dp"
            tools:ignore="UnusedAttribute"
            android:fontFamily="@font/regular"/>

        <EditText
            android:id="@+id/et_set_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_set_password"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="23dp"
            android:textSize="16sp"
            android:lineHeight="21.86sp"
            tools:ignore="MissingConstraints,RtlCompat,UnusedAttribute"
            android:autofillHints=""
            android:inputType="textPassword"
            android:textColorHint="#c9c9c9"
            android:textColor="@color/black"
            android:fontFamily="@font/regular"
            android:drawableEnd="@drawable/ic_hide"
            android:backgroundTint="#EAECEF"
            android:paddingBottom="20dp"/>

        <TextView
            android:id="@+id/tv_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:lineHeight="21.86sp"
            android:textColor="#9a9a9a"
            android:text="@string/confirm_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_set_password"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="24dp"
            tools:ignore="UnusedAttribute"
            android:fontFamily="@font/regular"/>

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password_again"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_confirm_password"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="23dp"
            android:textSize="16sp"
            android:lineHeight="21.86sp"
            tools:ignore="MissingConstraints,RtlCompat,UnusedAttribute"
            android:autofillHints=""
            android:inputType="textPassword"
            android:textColorHint="#c9c9c9"
            android:textColor="@color/black"
            android:fontFamily="@font/regular"
            android:drawableEnd="@drawable/ic_hide"
            android:backgroundTint="#EAECEF"
            android:paddingBottom="20dp"/>

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_email"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:lineHeight="21.86sp"
            android:text="@string/confirm"
            tools:ignore="UnusedAttribute"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_confirm_password"
            android:layout_marginTop="54dp"
            android:gravity="center"
            android:layout_marginStart="41dp"
            android:layout_marginEnd="41dp"
            android:paddingTop="14dp"
            android:paddingBottom="10dp"
            android:fontFamily="@font/semibold"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>