<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ActivitySignIn"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="60dp"
            android:src="@drawable/logoyoga"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_change_starts_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo"
            android:layout_marginTop="54dp"
            android:textSize="28sp"
            android:lineHeight="38.25dp"
            android:textColor="#367E90"
            android:text="@string/change_starts_here"
            tools:targetApi="p" />

        <TextView
            android:id="@+id/tv_describe"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_change_starts_here"
            android:layout_marginTop="10dp"
            android:text="@string/describe"
            android:textSize="16sp"
            android:textColor="#9A9A9A"
            android:lineHeight="21.86dp"
            android:gravity="center"
            tools:targetApi="p"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_sign_in_with_email"
            android:layout_width="293dp"
            android:layout_height="46dp"
            android:background="@drawable/custom_button_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_describe"
            android:layout_marginTop="54dp">
            <ImageView
                android:id="@+id/iv_icon_email"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/ic_email"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="110dp"
                tools:ignore="ContentDescription,RtlCompat" />
            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_icon_email"
                android:layout_marginStart="9dp"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:lineHeight="21.86dp"
                tools:ignore="RtlCompat"
                tools:targetApi="p" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_sign_in_with_facebook"
            android:layout_width="293dp"
            android:layout_height="46dp"
            android:background="@drawable/custom_button_facebook"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_sign_in_with_email"
            android:layout_marginTop="24dp">
            <ImageView
                android:id="@+id/iv_icon_facebook"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/ic_facebook"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="93dp"
                tools:ignore="ContentDescription,RtlCompat" />
            <TextView
                android:id="@+id/tv_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_icon_facebook"
                android:layout_marginStart="9dp"
                android:text="@string/facebook"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:lineHeight="21.86dp"
                tools:ignore="RtlCompat"
                tools:targetApi="p" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_sign_in_with_google"
            android:layout_width="293dp"
            android:layout_height="46dp"
            android:background="@drawable/custom_button_google"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_sign_in_with_facebook"
            android:layout_marginTop="24dp">
            <ImageView
                android:id="@+id/iv_icon_google"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/google"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="93dp"
                tools:ignore="RtlCompat"
                android:contentDescription="@string/google" />
            <TextView
                android:id="@+id/tv_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_icon_google"
                android:layout_marginStart="13dp"
                android:text="@string/google"
                android:textColor="#303030"
                android:textSize="16sp"
                android:lineHeight="21.86dp"
                tools:ignore="RtlCompat"
                tools:targetApi="p" />
        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>